--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -10,8 +10,8 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/base-jpa?characterEncoding=utf8&useSSL=false&serverTimezone=UTC
     username: root
-#    password: 123456
-    password: helloWorld
+    password: 123456
+#    password: helloWorld
     type: com.zaxxer.hikari.HikariDataSource
 
     hikari:
