--- a/websocket/src/main/resources/application.yml
+++ b/websocket/src/main/resources/application.yml
@@ -2,3 +2,20 @@ server:
   port: 8087
   servlet:
     context-path: /
+
+
+spring:
+  datasource:
+    driver-class-name: com.mysql.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/basejpa?characterEncoding=utf8&useSSL=false&serverTimezone=UTC
+    username: root
+    password: 123456
+#    password: helloWorld
+
+
+  jpa:
+    show-sql: false
+    #配置自动建表
+    hibernate:
+      ddl-auto: update
+
