--- a/http/pom.xml
+++ b/http/pom.xml
@@ -4,12 +4,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.lzp</groupId>
-    <artifactId>spring-boot-http</artifactId>
+    <artifactId>http</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>spring-boot-http</name>
-    <description>Demo project for Spring Boot</description>
+    <name>http</name>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
