--- a/pom.xml
+++ b/pom.xml
@@ -25,8 +25,9 @@
         <module>fastdfs-csource</module>
         <module>opencv</module>
         <module>video</module>
-        <module>httpclient</module>
+        <module>http</module>
         <module>fileupload</module>
+        <module>email</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
