--- a/zigbee/pom.xml
+++ b/zigbee/pom.xml
@@ -2,36 +2,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.huajie</groupId>
-    <artifactId>boot-jpa-base</artifactId>
+    <groupId>com.code</groupId>
+    <artifactId>zigbee</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
-    <modules>
-        <module>echarts</module>
-        <module>common</module>
-        <module>api</module>
-        <module>backend</module>
-        <module>weixinpay</module>
-        <module>wxjspay</module>
-        <module>wxminiapp</module>
-        <module>wx-scan-login</module>
-        <module>mqtt.customer</module>
-        <module>mqtt.producer</module>
-        <module>socket</module>
-        <module>websocket</module>
-        <module>officialWebsite</module>
-        <module>qrcode-login</module>
-        <module>fastdfs-tobato</module>
-        <module>fastdfs-csource</module>
-        <module>opencv</module>
-        <module>video</module>
-        <module>http</module>
-        <module>fileupload</module>
-        <module>email</module>
-        <module>qiniu</module>
-        <module>qiniu-layui</module>
-        <module>zigbee</module>
-    </modules>
+
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
@@ -44,10 +19,44 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
+
     <dependencies>
+        <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.16</version>
+        </dependency>
     </dependencies>
+
     <build>
         <plugins>
+
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <configuration>
+                    <appendAssemblyId>false</appendAssemblyId>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                    <archive>
+                        <manifest>
+                            <!-- 此处指定main方法入口的class -->
+                            <mainClass>com.firealarm.Boot</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>make-assembly</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>assembly</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
