--- a/httpclient/pom.xml
+++ b/httpclient/pom.xml
@@ -48,6 +48,12 @@
             <artifactId>lombok</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>commons-beanutils</groupId>
+            <artifactId>commons-beanutils</artifactId>
+            <version>1.8.0</version>
+        </dependency>
+
 
     </dependencies>
 
